# Synth

./: .gitattributes  .gitignore  .replit  DEPLOYMENT.md  QUICK_DEPLOY.md  README.md  TESTING.md  api_server.py  api_server_comprehensive.py  api_server_enhanced.py  app.py  architecture_summary.md  configuration_mapper.py  data_flow_visualizer.py  demo_mindmap_output.json  dependencies.txt  deployment.json  ehr_database_service.py  ehr_schema_generator.py  enhanced_ehr_jobs.db  enterprise_framework.py  fastapi_mcp_server.py  index.html  integrated_backend_server.py  integrated_jobs.db  integrated_server_v2.py  integrated_server_v3_enhanced.py  mcp_server.py  package-lock.json  package.json  patient_data_validation_test.py  patient_validation_results.json  pediatric_cardiology_demo.py  pharma_executive_workflows.py  pyproject.toml  replit.md  research_dashboard.py  simple_api_server.py  tailwind.config.js  user_registrations.db  (+1 more)
agents/: advanced_clinical_configuration.py  adversarial_validation_agent.py  agent_lifecycle_manager.py  biomedical_database_connector.py  critique_agent.py  enhanced_literature_agent.py  literature_agent.py  medical_terminology_agent.py  multimodal_ehr_agent.py  pediatric_cardiology_enhanced_generator.py  pubmed_connector.py  rag_orchestrator.py  statistical_validation_agent.py  surgical_strategy_simulator.py  synthetic_cohort_agent.py  web_monitor_agent.py
api/: openapi_spec.yaml  swagger_docs.py  ux_endpoints.py
attached_assets/: LandingPage_1751390844121.jsx  Pasted---1751405953321_1751405953321.txt  Pasted--Absolutely-here-is-a-rewritten-explicit-updated-version-of-your-agentic-synthetic-EHR-architec-1751416189633_1751416189634.txt  (+22 more)
models/: comprehensive_ehr_models.py  (+3 more)
(+187 files in other folders)
