[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.1",
    "anthropic>=0.52.0",
    "bcrypt>=4.3.0",
    "beautifulsoup4>=4.13.4",
    "celery>=5.5.2",
    "chromadb>=1.0.10",
    "defusedxml>=0.7.1",
    "fake-useragent>=2.2.0",
    "fastapi>=0.115.9",
    "feedparser>=6.0.11",
    "graphviz>=0.20.3",
    "matplotlib>=3.10.3",
    "newspaper3k>=0.2.8",
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=6.1.0",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "selenium>=4.33.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
    "uuid>=1.30",
    "uvicorn>=0.34.2",
    "validators>=0.35.0",
    "websockets>=15.0.1",
]
